--- a/templates/Header.mustache
+++ b/templates/Header.mustache
@@ -18,15 +18,15 @@
 
     {{>Search}}
 
-    <div class="ridvan-header-tools">
-        <div class="ridvan-icon-menus">
+    <div class="nightingale-header-tools">
+        <div class="nightingale-icon-menus">
             {{>ContentEdit}}
             {{>ContentTalk}}
             {{>Notifications}}
-            <div class="ridvan-menu-wrapper">
+            <div class="nightingale-menu-wrapper">
                 {{>Dropdown}}{{>ContentHybrid}}
             </div>
-            <div class="ridvan-menu-wrapper ridvan-personal-wrapper">
+            <div class="nightingale-menu-wrapper nightingale-personal-wrapper">
                 {{>Dropdown}}{{>PersonalMenu}}
             </div>
         </div>
