--- a/templates/ContentEdit.mustache
+++ b/templates/ContentEdit.mustache
@@ -1,5 +1,5 @@
-{{#ridvan-content-edit}}
-<div id="{{id}}" class="mw-portlet ridvan-edit-button">
+{{#nightingale-content-edit}}
+<div id="{{id}}" class="mw-portlet nightingale-edit-button">
     <div class="mw-portlet-body">
         {{#array-links}}
             <a {{#array-attributes}}{{key}}="{{value}}" {{/array-attributes}}>
@@ -8,4 +8,4 @@
         {{/array-links}}
     </div>
 </div>
-{{/ridvan-content-edit}}
+{{/nightingale-content-edit}}
