--- a/templates/ContentHybrid.mustache
+++ b/templates/ContentHybrid.mustache
@@ -3,7 +3,7 @@
     <label for="cb-hybrid" class="mw-checkbox-hack-button" aria-label="More Options">More ▾</label>
     <div class="mw-portlet-body">
         <ul>
-            {{#ridvan-content-hybrid}}
+            {{#nightingale-content-hybrid}}
                 <li id="{{id}}" class="{{class}}">
                     {{^array-links}}
                          <a {{#array-attributes}}{{key}}="{{value}}" {{/array-attributes}}>
@@ -17,7 +17,7 @@
                          </a>
                     {{/array-links}}
                 </li>
-            {{/ridvan-content-hybrid}}
+            {{/nightingale-content-hybrid}}
         </ul>
     </div>
 </div>
