--- a/templates/ContentTalk.mustache
+++ b/templates/ContentTalk.mustache
@@ -1,5 +1,5 @@
-{{#ridvan-content-talk}}
-<div id="{{id}}" class="mw-portlet ridvan-talk-button">
+{{#nightingale-content-talk}}
+<div id="{{id}}" class="mw-portlet nightingale-talk-button">
     <div class="mw-portlet-body">
         {{#array-links}}
             <a {{#array-attributes}}{{key}}="{{value}}" {{/array-attributes}}>
@@ -8,4 +8,4 @@
         {{/array-links}}
     </div>
 </div>
-{{/ridvan-content-talk}}
+{{/nightingale-content-talk}}
