--- a/templates/Sidebar.mustache
+++ b/templates/Sidebar.mustache
@@ -1,4 +1,4 @@
-<aside class="ridvan-sidebar">
+<aside class="nightingale-sidebar">
     {{#data-portlets-sidebar}}
         {{#data-portlets-first}}{{>Portlet}}{{/data-portlets-first}}
         {{#array-portlets-rest}}{{>Portlet}}{{/array-portlets-rest}}
